Bug 370516 - Adding activity pager to panel causes plasmashell to crash [plasma 5.8.1]
Summary: Adding activity pager to panel causes plasmashell to crash [plasma 5.8.1]
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.8.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 370630 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-12 00:41 UTC by João Bóia
Modified: 2016-11-02 10:19 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace 1 (533 bytes, text/plain)
2016-10-16 13:28 UTC, eemantsal
Details
Bactrace 2 (7.73 KB, text/plain)
2016-10-16 13:28 UTC, eemantsal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description João Bóia 2016-10-12 00:41:15 UTC
Arch packages were updated today to 5.8.1 and Plasma would crash. I was able to get it running again by deleting the file "plasma-org.kde.plasma.desktop-appletsrc". While I was re-adding everything I had before, plasmashell crashed immediately when I added the activity pager.

Reproducible: Always

Steps to Reproduce:
1. Drag activity pager to a panel and release





Thread 1 "plasmashell" received signal SIGSEGV, Segmentation fault.
0x00007fff326dd300 in ?? () from /usr/lib/qt/qml/org/kde/plasma/private/pager/libpagerplugin.so
(gdb) bt
#0  0x00007fff326dd300 in ?? () from /usr/lib/qt/qml/org/kde/plasma/private/pager/libpagerplugin.so
#1  0x00007ffff1ee8cb4 in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) () from /usr/lib/libQt5Core.so.5
#2  0x00007ffff1ee8f12 in QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) () from /usr/lib/libQt5Core.so.5
#3  0x00007fff326da256 in ?? () from /usr/lib/qt/qml/org/kde/plasma/private/pager/libpagerplugin.so
#4  0x00007fff326dafef in ?? () from /usr/lib/qt/qml/org/kde/plasma/private/pager/libpagerplugin.so
#5  0x00007ffff50336bc in ?? () from /usr/lib/libQt5Qml.so.5
#6  0x00007ffff4fc0cf2 in ?? () from /usr/lib/libQt5Qml.so.5
#7  0x00007ffff4fc18f4 in QQmlIncubationController::incubateFor(int) () from /usr/lib/libQt5Qml.so.5
#8  0x00007ffff60cef6c in ?? () from /usr/lib/libKF5Declarative.so.5
#9  0x00007ffff4fc1702 in QQmlEnginePrivate::incubate(QQmlIncubator&, QQmlContextData*) () from /usr/lib/libQt5Qml.so.5
#10 0x00007ffff4fbc758 in QQmlComponent::create(QQmlIncubator&, QQmlContext*, QQmlContext*) () from /usr/lib/libQt5Qml.so.5
#11 0x00007ffff60cbbe3 in KDeclarative::QmlObject::completeInitialization(QHash<QString, QVariant> const&) ()
   from /usr/lib/libKF5Declarative.so.5
#12 0x00007ffff799a00d in PlasmaQuick::AppletQuickItem::init() () from /usr/lib/libKF5PlasmaQuick.so.5
#13 0x00007fffd806b6e4 in ?? () from /usr/lib/qt/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#14 0x00007ffff799b208 in PlasmaQuick::AppletQuickItem::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) ()
   from /usr/lib/libKF5PlasmaQuick.so.5
#15 0x00007ffff5c63f75 in QQuickItemPrivate::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) ()
   from /usr/lib/libQt5Quick.so.5
#16 0x00007ffff5c68fbe in QQuickItemPrivate::refWindow(QQuickWindow*) () from /usr/lib/libQt5Quick.so.5
#17 0x00007ffff5c68f64 in QQuickItemPrivate::refWindow(QQuickWindow*) () from /usr/lib/libQt5Quick.so.5
#18 0x00007ffff5c6a454 in QQuickItem::setParentItem(QQuickItem*) () from /usr/lib/libQt5Quick.so.5
#19 0x00007ffff79aa2fd in ?? () from /usr/lib/libKF5PlasmaQuick.so.5
#20 0x0000000000441e20 in ?? ()
#21 0x00007ffff1ee59ce in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#22 0x00007ffff1ef26d8 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib/libQt5Core.so.5
#23 0x00007ffff1ee6473 in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#24 0x00007ffff2e24e0c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#25 0x00007ffff2e2c581 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#26 0x00007ffff1eb9de0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#27 0x00007ffff1f0d6ae in QTimerInfoList::activateTimers() () from /usr/lib/libQt5Core.so.5
#28 0x00007ffff1f0dbd1 in ?? () from /usr/lib/libQt5Core.so.5
#29 0x00007fffec8b8e67 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0x00007fffec8b90d0 in ?? () from /usr/lib/libglib-2.0.so.0
#31 0x00007fffec8b917c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0x00007ffff1f0e70f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#33 0x00007ffff1eb823a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#34 0x00007ffff1ec073c in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#35 0x000000000041c8b2 in ?? ()
#36 0x00007ffff152d291 in __libc_start_main () from /usr/lib/libc.so.6
#37 0x000000000041cc3a in _start ()
Comment 1 Clemens John 2016-10-13 08:50:57 UTC
Hi,

I updated this morning to Plasma 5.8.1 on Archlinux too and I see the same behaviour. I deleted all plasma and activities related config files from ~./config and then the desktop starts without failures. But when adding the activity pager to the desktop or to the system panel plasma immidiately crashes.

If you need any log please send me a note.

Best whishes
Comment 2 eemantsal 2016-10-14 17:28:05 UTC
Same here on Gentoo.
Since Plasma 5.8.1 the Activity pager plasmoid makes the process plasmashell crash and the desktop becomes a black screen. All the apps keep running, but the desktop disppears. Removing the lines that reference "activitypager" from .config/plasma-org.kde.plasma.desktop-appletsrc the problematic plasmoid and restarting Plasmashell restores the dektop with all its plasmoids, except, obviously, Activity pager. Any futher intent to put again the activity pager on the desktop or on a panel results in the mentioned crash again.
Comment 3 eemantsal 2016-10-14 17:35:12 UTC
(In reply to João Bóia from comment #0)
> Arch packages were updated today to 5.8.1 and Plasma would crash. I was able
> to get it running again by deleting the file
> "plasma-org.kde.plasma.desktop-appletsrc"

João, just for your info, you don't need to delete plasma-org.kde.plasma.desktop-appletsrc and lose all your desktop configuration; if you just delete the lines that correspond to the activity pager plasmoid and restart plasmashell you'll keep everything except the activity pager plasmoid.
In my case, the conflictive lines were these:
[Containments][85][Applets][104]
immutability=1
plugin=org.kde.plasma.activitypager

[Containments][85][Applets][104][Configuration][ConfigDialog]
DialogHeight=540
DialogWidth=720

[Containments][85][Applets][104][Configuration][General]
currentDesktopSelected=ShowDesktop
displayedText=Name
showWindowIcons=true

The numbers in brackets will vary depending of each user's desktop configuration, but the rest should be the same. So if you keep a copy of your old .config/plasma-org.kde.plasma.desktop-appletsrc you can quit Plasmashell, edit .config/plasma-org.kde.plasma.desktop-appletsrc in a terminal window, and the restart Plasmashell to have all your plasmoids, panels, backgrounds, etc back.
Comment 4 Eike Hein 2016-10-15 13:05:12 UTC
Could you retry with 5.8.1? This is a crash in Qt, but reading through the trace I think code changes in 5.8.1 could be relevant.
Comment 5 Eike Hein 2016-10-15 13:08:46 UTC
*** Bug 370630 has been marked as a duplicate of this bug. ***
Comment 6 Eike Hein 2016-10-15 13:52:40 UTC
Please also add information about how many activities you are using, what state they are in, etc.
Comment 7 Graham 2016-10-15 14:23:33 UTC
I raised a bug report at https://bugs.kde.org/show_bug.cgi?id=370630 for the same issue.

While there is no current fix, using the Activity Bar widget instead works, allowing normal activity operations.
Comment 8 Eike Hein 2016-10-15 14:40:48 UTC
In addition to the info I asked for in comment #6, I'd also like to hear about which Qt version(s) you're using, as the crash happens in Qt and might be version-specific (since I can't reproduce it personally).
Comment 9 Graham 2016-10-15 14:52:16 UTC
In Neon, system is:
Plasma 5.8.1
KDE Frameworks 5.27.0
Qt 5.7.0
Kernel 4.4.0-43-generic
Comment 10 Graham 2016-10-15 15:00:50 UTC
As far as how many activities and what state they're in, if you have no activities, then simply creating a new one that does nothing is enough to crash the display.
Comment 11 Eike Hein 2016-10-15 15:20:43 UTC
Definitely can't reproduce it then. A better backtrace with more debug symbols and on 5.8.1 might help. The posted trace crucially lacks symbols in libpagerplugin.
Comment 12 João Bóia 2016-10-15 15:54:41 UTC
(In reply to Eike Hein from comment #8)
>In addition to the info I asked for in comment #6, I'd also like to hear about which Qt >version(s) you're using, as the crash happens in Qt and might be version-specific (since I can't >reproduce it personally).
I only use 2 activities, both of them were active at the time.
Arch ships with qt 5.7.0
Frameworks was on 5.26.0 when I reported the bug, but has now moved to 5.27.0 (I'll check if it still happens later).

(In reply to Eike Hein from comment #11)
> Definitely can't reproduce it then. A better backtrace with more debug
> symbols and on 5.8.1 might help. The posted trace crucially lacks symbols in
> libpagerplugin.

Unfortunately Arch Linux strips debugs symbols, so that's all I could get. Maybe someone else could give a more detailed trace.
Comment 13 itl 2016-10-15 17:51:55 UTC
I also can confirm this on Arch with Plasma 5.8.1.  Logging in took far to long, and when it finally did, the panel and desktop were missing, but apps and krunner were functional.   I diagnosed this by first renaming .config, and logging out then in.  The default configuration this results in behaved normally until I tried adding the pager, at which point the panel and desktop crash as described.  I was able to fix this in a more targeted way by simply commenting out the lines:

immutability=1
plugin=org.kde.plasma.activitypager

in the file
~/.config/plasma-org.kde.plasma.desktop-appletsrc

I can still change activities with hotkeys, or with the scroll wheel on the desktop.  The latter is something that can be set in desktop settings.
Comment 14 Graham 2016-10-16 04:37:12 UTC
While this bug only affects users who have setup activities, and therefore newbies won't see it, it highlights the risk in using rolling distros. Much like Microsoft has changed to an "All or nothing" patch update method, where you cannot block individual KB numbers, if a problem occurs with an update such as 5.8.1 you cannot pick and choose what to update.

This bug has been reported by users of Neon, Arch and Gentoo so far. Since Eike cannot reproduce the bug, he cannot fix it.

Surely someone on the bug team can reproduce it. Asking users (such as myself) to provide things like "backtrace" which means nothing to me, is doing things backwards. It should be the experts, not the users, who find the solution.

Why does the Activity Bar widget work, but not the Activity Pager widget? Surely that should provide some sort of hint as to where the problem lies?

Problems like this will discourage people from using rolling distros and they will prefer LTS versions, which would be a real shame.

So please, come on guys, users have found a bug - the bug team should find the solution.
Comment 15 Deri James 2016-10-16 10:50:16 UTC
I am running Mageia (Cauldron) with 5.8.1, have the same problem. I ran activity pager under plasmawindowed using gdb, after installing the debug package for libqt5core5. This is the backtrace I got after the SIGSEGV, hope it is useful for you.

#0  0x00007fffc6830770 in QtPrivate::QSlotObject<void (PagerModel::*)() const, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) ()
    at /usr/lib64/qt5/qml/org/kde/plasma/private/pager/libpagerplugin.so
#1  0x00007ffff51edd63 in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) (a=0x0, this=<optimized out>) at ../../src/corelib/kernel/qobject_impl.h:123
#2  0x00007ffff51edd63 in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) (sender=sender@entry=0xa5dfa0, signal_index=4, receiver=receiver@entry=0xa5c5f0, slot=slot@entry=0x0, slotObj=slotObj@entry=0xa846a0, type=Qt::UniqueConnection, types=0x0, senderMetaObject=0x7fffc6822800 <TaskManager::ActivityInfo::staticMetaObject>) at kernel/qobject.cpp:4693
#3  0x00007ffff51edf65 in QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) (sender=0xa5dfa0, signal=<optimized out>, receiver=0xa5c5f0, slot=0x0, slotObj=0xa846a0, type=Qt::UniqueConnection, types=0x0, senderMetaObject=0x7fffc6822800 <TaskManager::ActivityInfo::staticMetaObject>) at kernel/qobject.cpp:4658
#4  0x00007fffc682dc9c in PagerModel::Private::refreshDataSource() ()
    at /usr/lib64/qt5/qml/org/kde/plasma/private/pager/libpagerplugin.so
#5  0x00007fffc682ebef in PagerModel::refresh() [clone .part.47] ()
    at /usr/lib64/qt5/qml/org/kde/plasma/private/pager/libpagerplugin.so
#6  0x00007ffff6e68092 in QQmlObjectCreator::finalize(QQmlInstantiationInterrupt&) ()
    at /lib64/libQt5Qml.so.5
#7  0x00007ffff6dfd5aa in QQmlIncubatorPrivate::incubate(QQmlInstantiationInterrupt&) ()
    at /lib64/libQt5Qml.so.5
#8  0x00007ffff6dfe0f8 in QQmlIncubatorPrivate::forceCompletion(QQmlInstantiationInterrupt&) ()
    at /lib64/libQt5Qml.so.5
#9  0x00007ffff6dfe14c in QQmlIncubator::forceCompletion() () at /lib64/libQt5Qml.so.5
#10 0x00007ffff3ca05f0 in KDeclarative::QmlObject::completeInitialization(QHash<QString, QVariant> const&) () at /lib64/libKF5Declarative.so.5
#11 0x00007ffff7ba8b54 in PlasmaQuick::AppletQuickItem::init() () at /lib64/libKF5PlasmaQuick.so.5
#12 0x00007fffe04f2b44 in AppletInterface::init() ()
    at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#13 0x00007ffff7ba9be8 in PlasmaQuick::AppletQuickItem::itemChange(QQuickItem::ItemChange, QQuickItem::ItemChangeData const&) () at /lib64/libKF5PlasmaQuick.so.5
#14 0x00007ffff712b00e in QQuickItemPrivate::refWindow(QQuickWindow*) () at /lib64/libQt5Quick.so.5
#15 0x00007ffff712d584 in QQuickItem::setParentItem(QQuickItem*) () at /lib64/libQt5Quick.so.5
#16 0x0000000000407d0b in PlasmaWindowedView::setApplet(Plasma::Applet*) (this=this@entry=0x867c00, applet=applet@entry=0xa24260)
    at /usr/src/debug/plasma-workspace-5.8.1/plasma-windowed/plasmawindowedview.cpp:74
#17 0x0000000000406a4a in PlasmaWindowedCorona::loadApplet(QString const&, QList<QVariant> const&) (this=this@entry=0x6b7580, applet=..., arguments=...)
    at /usr/src/debug/plasma-workspace-5.8.1/plasma-windowed/plasmawindowedcorona.cpp:101
#18 0x0000000000405d23 in main(int, char**) (argc=3, argv=<optimized out>)

Let me know if you need any further debug packages installed to get a useful trace.
Comment 16 eemantsal 2016-10-16 13:28:09 UTC
Created attachment 101584 [details]
Backtrace 1
Comment 17 eemantsal 2016-10-16 13:28:58 UTC
Created attachment 101585 [details]
Bactrace 2
Comment 18 eemantsal 2016-10-16 13:29:29 UTC
(In reply to Eike Hein from comment #4)
> Could you retry with 5.8.1? This is a crash in Qt, but reading through the
> trace I think code changes in 5.8.1 could be relevant.

I'm already in 5.8.1, as I said this crash has beginned to happen inmediately after upgrading from 5.8.0 to 5.8.1; in 5.8.0 everything was ok.
I'm on QT 5.7, Frameworks 5.27, and have 2 activities both active, but I have tried a fresh new account with no activities, completely by default settings, and it happens the same.

Above you have 2 backtraces from me, the first one was taken after the first crash when trying to add the plasmoid in question and launching plasmashell from a terminal window running GDB; the second one was taken after a crash but I first deleted plasma-org.kde.plasma.desktop-appletsrc and then, again from a GDB session in Konsole, lanched plasmashell.

It's the first time that I use GDB, so I'm aware I'm probably providing not very useful backtraces. Please don't hesitate "instructing" me to be able to supply more useful backtraces if you consider it convinient.
Comment 19 eemantsal 2016-10-16 13:43:01 UTC
(In reply to eemantsal from comment #18)
> 
> Above you have 2 backtraces from me, the first one was taken after the first
> crash when trying to add the plasmoid in question and launching plasmashell
> from a terminal window running GDB; the second one was taken after a crash
> but I first deleted plasma-org.kde.plasma.desktop-appletsrc and then, again
> from a GDB session in Konsole, lanched plasmashell.

Sorry, I think I haven't been very efficacious with my mental translation to english in that paragraph (shoud be a grace period in this pages in which we could edit our messages and avoid repetitions).

Anyway, I meant that the first backtrace was taken after plasma crashed as a consequence of adding the Activity pager plasmoid to the desktop and I inmediately relaunched plasmashell from a GDB session, with no action in between (ergo with the plasmoid still present in plasma-org.kde.plasma.desktop-appletsrc configuration). The second one was taken too launching plasmashell from GDB but this time I had first deleted the plasma-org.kde.plasma.desktop-appletsrc file so plasmashell created a fresh new one, and then, one Plasma started correctly, I added again this problematic plasmoid.

Sorry for my lack of clarity in the first message, as you may guess I'm not a native english speaker.
Comment 20 Eike Hein 2016-10-16 17:31:29 UTC
>  Asking users (such as myself) to provide things like "backtrace" which means nothing to me, is doing things backwards. It should be the experts, not the users, who find the solution.

Providing a backtrace isn't finding a solution, it's providing information about the problem. Note that we try to enable users to do this easily by popping up a crash information dialog that shows the backtrace along with a bug reporting wizard.

> So please, come on guys, users have found a bug - the bug team should find the solution.

The picture in your head doesn't conform to reality, I'm afraid - there's no "bug team", you're talking to a developer. Of course we don't like bugs and of course we try to fix them, but to fix them we need to understand them, and to understand them we need information, so ask questions back. That's just part of the process, making and improving this software is a collaborative effort.


To get back to business: Deri's backtrace is better, but unfortunately still lacks line numbers for libpagerplugin.so. For now I'm still in a holding pattern waiting for more info - though I will probably grab Neon on Monday when I'm back in the office (it IS a weekend, you now) and try to produce one myself.
Comment 21 Eike Hein 2016-10-17 12:45:18 UTC
Backtrace: #0  QtPrivate::QSlotObject<void (PagerModel::*)() const, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=2, this_=0x8c22e0, 
    r=0x0, a=0x0, ret=0x7fffffffd1af)
    at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject_impl.h:152
#1  0x00007ffff5248d54 in QtPrivate::QSlotObjectBase::compare (a=0x0, 
    this=<optimized out>)
    at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:129
#2  QObjectPrivate::connectImpl (sender=sender@entry=0x8bd7b0, signal_index=4, 
    receiver=receiver@entry=0x8bc2e0, slot=slot@entry=0x0, 
    slotObj=slotObj@entry=0x8e9a40, type=Qt::UniqueConnection, types=0x0, 
    senderMetaObject=0x7fffcabb5800 <TaskManager::ActivityInfo::staticMetaObject>)
    at kernel/qobject.cpp:4709
#3  0x00007ffff5248f82 in QObject::connectImpl (sender=sender@entry=0x8bd7b0, 
    signal=signal@entry=0x7fffffffd3c0, receiver=receiver@entry=0x8bc2e0, 
    slot=slot@entry=0x0, slotObj=0x8e9a40, type=Qt::UniqueConnection, types=0x0, 
    senderMetaObject=0x7fffcabb5800 <TaskManager::ActivityInfo::staticMetaObject>)
    at kernel/qobject.cpp:4674
#4  0x00007fffcabbfcbf in QObject::connect<void (TaskManager::ActivityInfo::*)() const, PagerModel::Private::refreshDataSource()::<lambda()> > (type=Qt::UniqueConnection, 
    slot=..., context=0x8bc2e0, 
    signal=(void (TaskManager::ActivityInfo::*)(const TaskManager::ActivityInfo * const)) 0x7fffca9a0ea0 <TaskManager::ActivityInfo::numberOfRunningActivitiesChanged() const>, sender=0x8bd7b0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:347
#5  PagerModel::Private::refreshDataSource (this=0x8bc760)
    at /workspace/build/applets/pager/plugin/pagermodel.cpp:174
#6  0x00007fffcabc0cff in PagerModel::refresh (this=0x8bc2e0)
    at /workspace/build/applets/pager/plugin/pagermodel.cpp:395
#7  0x00007ffff6e56cdc in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007ffff6de795a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
---Type <return> to continue, or q <return> to quit---
#9  0x00007ffff6de85b4 in QQmlIncubationController::incubateFor(int) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5                          
#10 0x00007ffff3cd36ac in ?? () from /usr/lib/x86_64-linux-gnu/libKF5Declarative.so.5                                                          
#11 0x00007ffff6de83c2 in QQmlEnginePrivate::incubate(QQmlIncubator&, QQmlContextData*) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5       
#12 0x00007ffff6de35bb in QQmlComponent::create(QQmlIncubator&, QQmlContext*, QQmlContext*) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5   
#13 0x00007ffff3cd00c5 in KDeclarative::QmlObject::completeInitialization(QHash<QString, QVariant> const&) ()                                  
   from /usr/lib/x86_64-linux-gnu/libKF5Declarative.so.5                                                                                       
#14 0x00007ffff7ba2574 in PlasmaQuick::AppletQuickItem::init() () from /usr/lib/x86_64-linux-gnu/libKF5PlasmaQuick.so.5                        
#15 0x00007fffd0abcf84 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
Comment 22 Eike Hein 2016-10-17 12:46:15 UTC
This is actually a Qt bug, fixed by https://codereview.qt-project.org/#/c/160760/

Which explains why it didn't crash in my Qt 5.8.

We'll work around the Qt bug in our code, so 5.8.2 will work with broken older Qt versions.
Comment 23 Eike Hein 2016-10-17 12:54:11 UTC
Git commit d888c454192ee5c5683c42f40be1193692376ef5 by Eike Hein.
Committed on 17/10/2016 at 12:53.
Pushed by hein into branch 'Plasma/5.8'.

Test the QMetaObject::Connection instead of using Qt::UniqueConnection.

Avoids a crash in deployed versions of Qt.

Upstream bugfix: https://codereview.qt-project.org/#/c/160760/

M  +5    -3    applets/pager/plugin/pagermodel.cpp

http://commits.kde.org/plasma-desktop/d888c454192ee5c5683c42f40be1193692376ef5
Comment 24 Eike Hein 2016-10-17 13:03:32 UTC
Follow-up code change in http://commits.kde.org/plasma-desktop/7b2f1624126f1a014f7aa30c31d0964efe028935
Comment 25 Clemens John 2016-11-02 10:19:03 UTC
Hi,

I updated to Plasma 5.3 on Archlinux today and can confirm that the bug is fixed. Thank you :)

Best whishes