Test the QMetaObject::Connection instead of using Qt::UniqueConnection.

Avoids a crash in deployed versions of Qt.

Upstream bugfix: https://codereview.qt-project.org/#/c/160760/

BUG:370516